package survival.util;

import survival.dto.GameEndDTO;
import survival.dto.InventoryDTO;
import survival.model.game.GameEndState;
import survival.model.game.Inventory;
import survival.model.game.Player;
import survival.model.game.ResourceType;

import java.util.HashMap;
import java.util.Map;

/**
 * 모델 객체를 DTO로 변환하는 유틸리티 클래스
 */
public class DTOConverter {

    // Achievement 모델을 AchievementDTO로 변환하는 

}