classDiagram
    %% DTO 및 유틸리티 다이어그램: 데이터 전송 객체와 유틸리티 클래스

    %% DTO 관련 관계
    DTOConverter ..> Player : 변환
    DTOConverter ..> PlayerDTO : 생성
    DTOConverter ..> Inventory : 변환
    DTOConverter ..> InventoryDTO : 생성
    DTOConverter ..> GameEndState : 변환
    DTOConverter ..> GameEndDTO : 생성
    
    class PlayerDTO {
        -int hp
        -int maxHp
        -int ap
        -int maxAp
        -int hunger
        -int maxHunger
        +PlayerDTO(int hp, int maxHp, int ap, int maxAp, int hunger, int maxHunger)
        +getHp() int
        +getMaxHp() int
        +getAp() int
        +getMaxAp() int
        +getHunger() int
        +getMaxHunger() int
    }
    
    class InventoryDTO {
        -Map~String, Integer~ items
        +InventoryDTO(Map~String, Integer~ items)
        +getItems() Map~String, Integer~
    }
    
    class GameEndDTO {
        -boolean victory
        -String message
        +GameEndDTO(boolean victory, String message)
        +isVictory() boolean
        +getMessage() String
    }
    
    class DTOConverter {
        <<유틸리티>>
        +convertToDTO(Player player) PlayerDTO
        +convertToDTO(Inventory inventory) InventoryDTO
        +convertToDTO(GameEndState endState) GameEndDTO
    } 